[tool.poetry]
name = "tabletop-frog"
version = "0.1.0"
description = ""
authors = ["evilchili <evilchili@gmail.com>"]
readme = "README.md"
packages = [
    { include = 'ttfrog' },
]

[tool.poetry.dependencies]
python = "^3.10"
TurboGears2 = "^2.4.3"
sqlalchemy = "^2.0.25"
tgext-admin = "^0.7.4"
webhelpers2 = "^2.0"
typer = "^0.9.0"
python-dotenv = "^0.21.0"
rich = "^13.7.0"
jinja2 = "^3.1.3"
tw2-forms = "^2.2.6"
mako = "^1.3.0"

#"tg.devtools" = "^2.4.3"
#repoze-who = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ttfrog = "ttfrog.cli:app"


